# fast-slurm

./: README.md  fetch.sh  howtodeploy.txt
slurm-install/: munge.key
slurm-install/configs/: allvminfo.txt  clean.sh  parastation.conf  pin_fast-0X  vm.xml
slurm-install/etc/: gres.conf  slurm.conf
slurm-install/scripts/: epilog.sh  epilogctld.sh  epilogresv.sh  genhostfiles.sh  genmac.sh  loadbal.sh  macall.file.bck  migrate_vm.sh  profiler.sh  prolog.sh  prolog_submit.sh  prologctld.sh  prologresv.sh  test.sh  trigger_mig.sh  vm_start.sh  vm_wrapper.sh
slurm-install/slurmsrc/: test.sh  test_m.sh
slurm-install/slurmsrc/loadbal/: load_bal.c
slurm-install/slurmsrc/src/plugins/job_submit/prolog_submit/: Makefile  job_submit_prolog.c
slurm-install/slurmsrc/src/plugins/job_submit/prolog_submit/prolog_submit/: Makefile.am  Makefile.in
slurm-install/slurmsrc/src/plugins/job_submit/prolog_submit/prolog_submit/.deps/: job_submit_prolog.Plo
slurm-install/slurmsrc/src/plugins/slurmctld/loadbal/: Makefile  Makefile.am  loadbal.c  loadbal.la
slurm-install/slurmsrc/src/slurmctld/: job_submit.c  job_submit.h  proc_req.c
slurm-install/slurmsrc/usr/local/etc/: slurm.conf
slurm-install/slurmsrc/usr/local/slurm/: epilog.sh  epilogctld.sh  epilogresv.sh  prolog.sh  prolog_submit.sh  prologctld.sh  prologresv.sh  vm_start.sh  vm_wrapper.sh
testcluster/: checkallvms.sh  cleanallvms.sh  cleannode.sh  cleanvms.sh  dhcpd.conf  hosts  node_setup.sh  off_slurm.sh  on_migfra.sh  on_slurm.sh  start_setup.sh  vmslurmstart.sh
(+4 files in other folders)
